--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
       <artifactId>jackson-core</artifactId>
       <version>2.13.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+    </dependency>
+
   </dependencies>
 
   <build>
