--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,22 @@
   <artifactId>starter</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-    <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 
-    <vertx.version>4.3.8</vertx.version>
-    <junit-jupiter.version>5.9.1</junit-jupiter.version>
+        <vertx.version>4.3.8</vertx.version>
+        <junit-jupiter.version>5.9.1</junit-jupiter.version>
 
-    <main.verticle>com.example.mocker.starter.MainVerticle</main.verticle>
-    <launcher.class>io.vertx.core.Launcher</launcher.class>
-  </properties>
+        <main.verticle>com.example.mocker.starter.MainVerticle</main.verticle>
+        <launcher.class>io.vertx.core.Launcher</launcher.class>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+    </properties>
 
   <dependencyManagement>
     <dependencies>
@@ -77,6 +79,18 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.26</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
